2014-06-22  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.[ch], ml_term.h, x_screen.c: 'visible' argument is added to
	  ml_term_blink() and ml_screen_blink().

	* ml_char.[ch]: ml_char_blink() => ml_char_set_visible()

	* ml_vt100_parser.c: put_char() is fixed.

2014-06-21  Araki Ken  <arakiken@users.sf.net>

	* vte.c: set_colors() is fixed.

	* man/mlterm.1, doc/ja/README.ja: Updated.

	* x_main_config.[ch]: --it/it_color, --bl/bl_color, --co/co_color and
	  --itfont/use_italic_font options are added.

	* x_font_manager.[ch]: x_set_use_italic_font() is added.

	* vte.c, MLTermPty.c, ml_term_manager.[ch]: Fixes by the change of
	  the arguments of x_font_manager_new(), x_color_manager_new() and
	  ml_create_term().

	* x_draw_str.[ch]: adjust_bd_ul_color() is removed.

	* x_color_manager.[ch]:
	  - _ITALIC_COLOR, _BLINKING_COLOR and CROSSED_OUT_COLOR are managed in
	    x_color_manager_t::sys_colors.
	  - x_color_manager_{set|get}_{bd|ul}_color() ->
	    x_color_manager_{set|get}_alt_color().
	  - x_color_manager_adjust_{bd|ul}_color() are removed.

	* ml_term.[ch]: ml_term_{set|get}_alt_color_mode() are added.

	* ml_vt100_parser.[ch]:
	  - ml_alt_color_mode_t is added.
	  - ml_vt100_parser_{set|get}_alt_color_mode() are added.
	  - vt100_parser->alt_color_mode is checked in put_char().

	* ml_color.h: ML_BOLD_COLOR, ML_ITALIC_COLOR, ML_UNDERLINE_COLOR,
	  ML_BLINKING_COLOR, ML_CROSSED_OUT_COLOR are added.

2014-06-20  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.[ch], x_screen.[ch]: SGR 5 and 25 are supported.

	* ml_term.h: ml_term_blink() is added.

	* ml_screen.[ch]: ml_screen_blink() and ml_screen_enable_blinking() are added.

	* im_fcitx.c, im_ibus.c, im_m17nlib.c, im_scim_mod_if.c, im_uim.c,
	  ml_screen.[ch], x_im.h, x_im_{candidate|status}_screen.c:
	  Fixes by is_blinking of ml_char_{set|combine}().

	* ml_char.[ch]: is_blinking is added to ml_char_{set|combine}(), and
	  ml_char_is_blinking() and ml_char_blink() are added.
